--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -8,6 +8,12 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+# install Pillow dependencies
+RUN apk --update add \
+    build-base \
+    jpeg-dev \
+    zlib-dev
+
 # install dependencies
 RUN pip install --upgrade pip
 COPY ./requirements.txt /usr/src/app/requirements.txt
